Fix Layout in BrowserNonClientFrameViewAsh.

This CL fixes the weird Layout order that the title bar had on Ash. Now
the Layout of the title bar no longer relies on the Layout of the
frame caption buttons.

Bug: 800216
Change-Id: I7a3678a0dcecf7d68eec95c178633fcc346bd67b